# gp2f

./: .gitignore  01_ast_policy_engine.md  02_event_sourcing_and_crdt.md  03_tokenized_ai_sandbox.md  04_network_and_websockets.md  05_durable_orchestration.md  06_security_storage_and_audit.md  ARCHITECTURE_EVALUATION.md  Cargo.toml  DECOUPLING_ANALYSIS.md  DECOUPLING_FEASIBILITY_REPORT.md  DEVELOPER_PREREQUISITES.md  Dockerfile  Dockerfile.worker  FRAMEWORK_EVALUATION.md  GAP_ANALYSIS.md  GP2F_EVALUATION.md  IMPLEMENTATION_STATUS.md  INFRASTRUCTURE_ANALYSIS.md  PLAN_SDK_FLUENT_API_IMPLEMENTATION.md  PRD_NODE_BINDINGS.md  PRODUCTION_MIGRATION_GUIDE.md  PRODUCTION_READINESS_PLAN.md  PRODUCTION_READINESS_REPORT.md  PROPOSAL_AGENTIC_NEGOTIATOR.md  PROPOSAL_AI_DISPUTE_RESOLUTION.md  PROPOSAL_AI_SOC_ANALYST.md  PROPOSAL_ALGO_INSURANCE.md  PROPOSAL_COLLAB_CAD.md  PROPOSAL_ENTERPRISE_PAYROLL_OPS.md  PROPOSAL_FIELD_MEDIC.md  PROPOSAL_PHARMA_MANUFACTURING_LOG.md  PROPOSAL_PRODUCTION_ARCHITECTURE.md  PROPOSAL_REALTIME_AUCTION.md  PROPOSAL_SDK_DX_IMPROVEMENT.md  PROPOSAL_SUPPLY_CHAIN.md  PROPOSAL_TYPESCRIPT_BACKEND_SDK.md  PUBLISHING.md  README.md  REPORT.md
.github/workflows/: ci.yml  publish.yml
cli/: Cargo.toml
cli/src/: main.rs
client-sdk/: README.md  package-lock.json  package.json  tsconfig.json
client-sdk/examples/: AgentDashboard.tsx  AiWorkflowForm.tsx
client-sdk/src/: MergeModal.tsx  ReconciliationBanner.tsx  UndoButton.tsx  client.ts  index.ts  policy-builder.ts  wire.ts
docs/: architecture.md  sdk-onboarding.md  wire-protocol.md
docs/architecture/: 01-the-four-pillars.md  adr-001-isomorphic-ast-over-fsm.md  adr-002-crdt-and-event-sourcing.md  adr-003-tokenized-ai-sandbox.md
docs/education/: concept-comparisons.md  gp2f-from-scratch.md
docs/getting-started/: local-dev-setup.md  testing-and-qa-runbook.md
docs/sdk-reference/: nodejs-bindings.md  policy-builder.md  rust-core-api.md  typescript-bindings.md
docs/security/: soc2-gdpr-hipaa.md
docs/usage-guides/: axum-server-implementation.md  react-client-integration.md
gp2f-actor/: Cargo.toml
gp2f-actor/src/: actor.rs  lib.rs
gp2f-api/: Cargo.toml
gp2f-api/src/: handlers.rs  lib.rs  middleware.rs  tool_gating.rs
gp2f-broadcast/: Cargo.toml
gp2f-broadcast/src/: broadcast.rs  lib.rs  redis_broadcast.rs
gp2f-canary/: Cargo.toml
gp2f-canary/src/: canary.rs  chaos.rs  lib.rs  replay_testing.rs
gp2f-core/: Cargo.toml
gp2f-core/src/: hlc.rs  lib.rs  wire.rs
gp2f-crdt/: Cargo.toml
gp2f-crdt/src/: lib.rs  reconciler.rs
gp2f-ingest/: Cargo.toml
gp2f-ingest/src/: async_ingestion.rs  lib.rs
gp2f-node/: Cargo.toml  README.md  gp2f-server-0.1.5.tgz  gp2f-server-0.1.6.tgz  gp2f-server-0.1.7.tgz  gp2f-server-0.1.8.tgz  index.d.ts  index.js  package-lock.json  package.json
gp2f-node/__test__/: index.spec.js  policy-builder.spec.js
gp2f-node/lib/: policy-builder.js
gp2f-node/src/: lib.rs  policy.rs  server.rs  workflow.rs
gp2f-runtime/: Cargo.toml
gp2f-runtime/src/: compat.rs  lib.rs
gp2f-security/: Cargo.toml
gp2f-security/src/: lib.rs  replay_protection.rs  signature.rs
gp2f-store/: Cargo.toml
gp2f-store/src/: event_store.rs  lib.rs  postgres_store.rs  temporal_store.rs
gp2f-token/: Cargo.toml
gp2f-token/src/: lib.rs  token_service.rs
gp2f-vibe/: Cargo.toml
gp2f-vibe/src/: lib.rs  llm_provider.rs
gp2f-workflow/: Cargo.toml
gp2f-workflow/src/: lib.rs  workflow.rs
helm/gp2f/: Chart.yaml  values.yaml
helm/gp2f/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml  temporal-postgres.yaml
migrations/: 20240522_init.sql  20240523_auto_seq.sql  20240524_op_id_unique.sql
policy-core/: Cargo.toml
policy-core/src/: ast.rs  crdt.rs  crdt_schema.rs  evaluator.rs  lib.rs  timestamp.rs  version.rs
policy-core/tests/: property_tests.rs
proto/: gp2f.proto
server/: Cargo.toml  LICENSE  README.md
server/src/: actor.rs  broadcast.rs  canary.rs  chaos.rs  compat.rs  event_store.rs  hlc.rs  lib.rs  limits.rs  llm_audit.rs  main.rs  middleware.rs  pilot_workflows.rs  postgres_store.rs  rate_limit.rs  rbac.rs  reconciler.rs  redis_broadcast.rs  replay_protection.rs  secrets.rs  signature.rs  temporal_store.rs  token_service.rs  vibe_classifier.rs  wasm_engine.rs  wire.rs  workflow.rs
server/tests/: ai_e2e.rs  schema_compat.rs
tests/: promptfoo.yaml
tests/load/: ai_load.js
