[workspace]
members = [
    "policy-core",
    "cli",
    "server",
    "gp2f-node",
    "gp2f-core",
    "gp2f-security",
    "gp2f-store",
    "gp2f-broadcast",
    "gp2f-token",
    "gp2f-crdt",
    "gp2f-actor",
    "gp2f-workflow",
    "gp2f-vibe",
    "gp2f-runtime",
    "gp2f-ingest",
    "gp2f-api",
    "gp2f-canary",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GP2F Contributors"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
proptest = "1"
