[package]
name = "gp2f-canary"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GP2F testing and stability tools"

[features]
default = ["redis-broadcast"]
redis-broadcast = ["gp2f-crdt/redis-broadcast"]

[dependencies]
gp2f-core = { path = "../gp2f-core" }
gp2f-crdt = { path = "../gp2f-crdt", default-features = false }
gp2f-workflow = { path = "../gp2f-workflow" }
policy-core = { path = "../policy-core", features = ["std"] }
serde.workspace = true
serde_json.workspace = true
tracing = "0.1"
