[package]
name = "gp2f-ingest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GP2F async ingestion pipeline"

[dependencies]
gp2f-core = { path = "../gp2f-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["full"] }
