[package]
name = "gp2f-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GP2F authentication, authorization, and cryptography"

[features]
default = ["redis-broadcast"]
redis-broadcast = ["dep:redis"]

[dependencies]
gp2f-core = { path = "../gp2f-core" }
policy-core = { path = "../policy-core", features = ["std"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
base64 = "0.22"
hmac-sha256 = "1.1"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.27", features = ["aio", "tokio-comp", "connection-manager"], optional = true }
