[package]
name = "gp2f-vibe"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GP2F AI/ML classification and analysis"

[dependencies]
gp2f-core = { path = "../gp2f-core" }
gp2f-api = { path = "../gp2f-api", default-features = false }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
blake3.workspace = true
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
