[package]
name = "gp2f-workflow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GP2F workflow definitions and orchestration"

[dependencies]
policy-core = { path = "../policy-core", features = ["std"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
