[package]
name = "policy-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Isomorphic AST policy evaluator for GP2F"

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
