[package]
name = "gp2f-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GP2F Axum-based reconciliation server"

[[bin]]
name = "gp2f-server"
path = "src/main.rs"

[dependencies]
policy-core = { path = "../policy-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
blake3.workspace = true
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac-sha256 = "1.1"
base64 = "0.22"
chrono.workspace = true
