[package]
name = "gp2f-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GP2F Axum-based reconciliation server"

[[bin]]
name = "gp2f-server"
path = "src/main.rs"

[features]
default = ["redis-broadcast"]
wasmtime-engine = ["dep:wasmtime", "dep:prost"]
redis-broadcast = ["dep:redis"]
postgres-store = ["dep:sqlx"]
# Enable production Temporal routing. Requires adding the temporal-client crate:
#   temporal-client = { git = "https://github.com/temporalio/sdk-rust", optional = true }
# then change this line to: temporal-production = ["dep:temporal-client"]
temporal-production = []

[dependencies]
policy-core = { path = "../policy-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
blake3.workspace = true
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
hmac-sha256 = "1.1"
base64 = "0.22"
chrono.workspace = true
# ed25519 signatures for cryptographic op_id middleware
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
# optional: Wasmtime WASM policy engine
wasmtime = { version = "28", optional = true }
prost = { version = "0.13", optional = true }
# optional: Redis PubSub broadcaster
redis = { version = "0.27", features = ["aio", "tokio-comp", "connection-manager"], optional = true }
# optional: Postgres-backed durable event store
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "json", "chrono"], optional = true }
# optional: Temporal SDK – add when enabling the temporal-production feature:
# temporal-client = { git = "https://github.com/temporalio/sdk-rust", optional = true }
# async trait support (used by temporal_store and llm_provider)
async-trait = "0.1"
# HTTP client for LLM provider calls
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
# Wiremock for mocking HTTP endpoints in integration tests
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
