[package]
name = "gp2f-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GP2F Axum-based reconciliation server"

[[bin]]
name = "gp2f-server"
path = "src/main.rs"

[features]
default = ["redis-broadcast"]
redis-broadcast = ["dep:redis", "gp2f-broadcast/redis-broadcast", "gp2f-token/redis-broadcast", "gp2f-actor/redis-broadcast", "gp2f-canary/redis-broadcast", "gp2f-security/redis-broadcast"]
wasmtime-engine = ["dep:wasmtime", "dep:prost", "gp2f-runtime/wasmtime-engine"]
postgres-store = ["dep:sqlx", "gp2f-store/postgres-store"]
# Enable production Temporal routing via the temporalio-client SDK (sdk-core).
temporal-production = ["gp2f-store/temporal-production"]

[dependencies]
gp2f-core = { path = "../gp2f-core" }
gp2f-security = { path = "../gp2f-security" }
gp2f-store = { path = "../gp2f-store" }
gp2f-broadcast = { path = "../gp2f-broadcast", default-features = false }
gp2f-token = { path = "../gp2f-token", default-features = false }
gp2f-crdt = { path = "../gp2f-crdt", default-features = false }
gp2f-actor = { path = "../gp2f-actor", default-features = false }
gp2f-workflow = { path = "../gp2f-workflow" }
gp2f-vibe = { path = "../gp2f-vibe" }
gp2f-runtime = { path = "../gp2f-runtime" }
gp2f-ingest = { path = "../gp2f-ingest" }
gp2f-api = { path = "../gp2f-api", default-features = false }
gp2f-canary = { path = "../gp2f-canary", default-features = false }
policy-core = { path = "../policy-core", features = ["std"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
blake3.workspace = true
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
hmac-sha256 = "1.1"
base64 = "0.22"
chrono.workspace = true
# ed25519 signatures for cryptographic op_id middleware
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
# optional: Wasmtime WASM policy engine
wasmtime = { version = "28", optional = true }
prost = { version = "0.13", optional = true }
# optional: Redis PubSub broadcaster
redis = { version = "0.27", features = ["aio", "tokio-comp", "connection-manager"], optional = true }
# optional: Postgres-backed durable event store
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "json", "chrono"], optional = true }
# async trait support (used by temporal_store and llm_provider)
async-trait = "0.1"
# HTTP client for LLM provider calls
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
# Wiremock for mocking HTTP endpoints in integration tests
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
